<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context="utilities.GetUserWebsite">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        android:saveEnabled="false"
        app:lottie_rawRes="@raw/website"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_your_business_website"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="27sp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/websiteSen"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/grey_txt">
    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/website_editName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/website_name_optional"
        app:startIconDrawable="@drawable/business_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/website_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email"
            android:inputType="textPersonName"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <include
        layout="@layout/progressbutton_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/progressButtonwebsite"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skipWebsite"
        android:text="@string/skip"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:textColor="@color/grey_txt"
        >

    </TextView>

</LinearLayout>