<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/welcome_txt23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/business_info"
            android:textAlignment="center"
            android:textColor="@color/wel_txt"
            android:textSize="30sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/businessName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/business_name"
            app:startIconDrawable="@drawable/business_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/businessName_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:inputType="textPersonName"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AddressLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/address"
            app:startIconDrawable="@drawable/address_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Address_businessEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:drawableEnd="@drawable/ic_baseline_location_on_24"
                android:drawableRight="@drawable/ic_baseline_location_on_24"
                android:inputType="textMultiLine"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/businessDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/business_description"
            app:counterEnabled="true"
            app:counterMaxLength="300"
            app:startIconDrawable="@drawable/description_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/businessDescriptionEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:inputType="textMultiLine"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/pick_service_category">

        </TextView>

        <Spinner
            android:id="@+id/serviceCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBusinessInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="45dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/buttonbackground"
            android:gravity="center"
            android:text="@string/continue2"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>
