<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="authentication.LoginActivity">

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/wel_txt"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/sign_intxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sign_up_to_continue"
        android:textAlignment="center"
        android:textColor="@color/grey_txt"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/Lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_intxt"
        android:orientation="vertical">
        <!--        <TextView-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/custom_email_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_rege"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_rege"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SignUp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/buttonbackground"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/or_continue_with"
            android:textColor="@color/grey_txt"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/fbicon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:src="@drawable/ic_facebook2"
                android:contentDescription="@string/todo" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/Google_rege"
                android:layout_toEndOf="@+id/fbicon"
                android:layout_toRightOf="@+id/fbicon"
                android:background="@color/white"
                android:src="@drawable/ic_launcher_foreground2"
                android:contentDescription="@string/todo" />

        </RelativeLayout>
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:saveEnabled="false"
            android:visibility="gone"
            app:lottie_rawRes="@raw/emailcheck"
            app:lottie_autoPlay="false"
            app:lottie_loop="true" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/HaveAc"
            android:layout_marginTop="85dp"
            android:gravity="center">

            <TextView
                android:id="@+id/DotAc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/grey_txt"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/DotAc"
                android:layout_toRightOf="@+id/DotAc"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>