<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
       <variable
           name="loginViewModel"
           type="ViewModels.LoginViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="authentication.LoginActivity">

        <TextView
            android:id="@+id/welcome_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/welcome_to"
            android:textAlignment="center"
            android:textColor="@color/wel_txt"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/sign_intxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/sign_in_to_continue"
            android:textAlignment="center"
            android:textColor="@color/grey_txt"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/Lin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_intxt"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/custom_email_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email"
                    android:text="@={loginViewModel.email}"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/pass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/password"
                    android:text="@={loginViewModel.password}"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/ForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginRight="35dp"
                android:text="@string/forgot_password"
                android:textColor="@color/grey_txt"
                android:textSize="12sp">

            </TextView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignIn_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/buttonbackground"
                android:gravity="center"
                android:text="@string/sign_in"
                android:onClick="@{()->loginViewModel.emailSubmit()}"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/or_continue_with"
                android:textColor="@color/grey_txt"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/FB_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:onClick="@{()->loginViewModel.FaceBookSubmit()}"
                    android:src="@drawable/ic_facebook2"
                    android:contentDescription="@string/todo" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/Google_btn"
                    android:layout_toEndOf="@+id/FB_btn"
                    android:layout_toRightOf="@+id/FB_btn"
                    android:onClick="@{()->loginViewModel.GoogleSubmit()}"
                    android:background="@color/white"
                    android:src="@drawable/ic_launcher_foreground2"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:saveEnabled="false"
                android:visibility="gone"
                app:lottie_speed="3"
                app:lottie_rawRes="@raw/processing"
                android:scaleType="fitCenter"
                app:lottie_autoPlay="false"
                app:lottie_loop="true" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/NoAccount"
                android:layout_marginTop="85dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/DotAc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/grey_txt"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@+id/DotAc"
                    android:layout_toRightOf="@+id/DotAc"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>
</layout>
