<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="utilities.ForgotPassword">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@color/wel_txt"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/custom_email_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_forgotActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_Password"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:strokeColor="@color/grey_faint"
        android:textAllCaps="false"
        android:textColor="@color/purple"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/reset"
        android:textSize="15sp" />
</LinearLayout>